--- a/bilibili-lite/src/member/base.styl
+++ b/bilibili-lite/src/member/base.styl
@@ -39,6 +39,11 @@
 #bili-data-center
 .dc-page
 .new-link-top-wrap .new-link-top-container
+.pie-empty
+.source-rank-open-button
+.cc-content-body.home-wrap.not-home
+body
+.chief-recommend-module .carousel-box
   background-color var(--c-background) !important
 
 .message-notice_wrap .tips-item_wrap
@@ -80,10 +85,15 @@
 .dc-radio-button.is-active
 .dc-radio-button:hover
 .section-item.actived
+.source-rank-open-button:hover
+.rank-active-target
+.rank-fans-medal
+.rank-vedio-target
+.rank-vedio-view
   background-color var(--c-hover) !important
 
 #dc-section_preference .list_wrap .list-item
-  background-color: var(--c-hover)
+  background-color var(--c-hover)
 
 .dc-progress-bar
 #charge-wrapper .main-charge .elec-con .progress .progress-bar .bar
@@ -93,10 +103,14 @@
 .line-divid
 .normal-v2-container .normal-title-wrp>.template-op>.template-op-divide
 .dc-radio-button:hover:before
+.rank-active-target-item .item-list li+li .item-wrap:after
+.rank-fans-medal-item .item-list li+li .item-wrap:after
+.rank-vedio-target-item .item-list li+li .item-wrap:after
+.rank-vedio-view-item .item-list li+li .item-wrap:after
   background-color var(--c-border) !important
 
 .echarts
-  background-color: var(--c-white)
+  background-color rgba(255, 255, 255, 0.2)
 
 .carousel-module .panel .title .tag
 .comment-list-item .ci-action a:hover
@@ -111,6 +125,7 @@
 .edui-default .edui-editor
 .article-danmu-wrp .danmu-box
 .article-danmu-wrp .danmu-filter .left .delete .option-wrp .act-btn
+.content-wrap .tag
   background-color transparent !important
 
 .tabs .tabs__header .tabs__header-item.is-active:after
@@ -142,6 +157,7 @@
 .share-modal .modal .modal-close
 .cc-article-wrp .del-wrp .modal-wrap .del-title
 .dc-section-item1_title_custom .sectionTitle
+.new-link-top-wrap .new-link-top-container .right-tips
   color var(--c-title) !important
 
 .notice_wrap .notice_body .hot-item .item-right
@@ -164,11 +180,12 @@
 .article-danmu-wrp .danmu-filter .left .delete .plain
 .article-danmu-wrp .danmu-box .danmu-table .danmu-item .item-content
 .cc-article-wrp .del-wrp .modal-wrap .del-tips
-#dc-section_essential .echarts div
 .section-item .tips_wrap
+#dc-section_retention .legend_wrap .legend-item .legend-label
   color var(--c-text) !important
 
 .link-top-container .link-top-item.active .red_point
+.echarts div
   color var(--c-white) !important
 
 .calendarEntry_box .greetings .greet-num
@@ -273,6 +290,7 @@ i.icon-shape:after
 .dc-radio-button:hover
 #dc-section_essential .item-in-row
 .watch_wrap
+.source-rank-open-button
   border-color var(--c-border) !important
 
 .cc-article-wrp .del-wrp .modal-wrap .geetest_holder.geetest_wind .geetest_radar_btn
@@ -288,11 +306,13 @@ i.icon-shape:after
 .cover-v2-container .cover-v2-detail-wrp .cover-v2-selector .cover-v2-selector-deg
 .article-danmu-wrp .danmu-filter .left .option-menu .option-arrow
 .new-link-top-wrap .arrow-tip
+.page-tips .arrow-tip
 .bcc-popover[x-placement^=bottom] .popper__arrow
   border-bottom-color var(--c-border) !important
 
 .article-danmu-wrp .danmu-filter .left .option-menu .option-arrow-border
-.new-link-top-wrap .arrow-tip:after
+.new-link-top-wrap .arrow-tip::after
+.page-tips .arrow-tip::after
 .bcc-popover[x-placement^=bottom] .popper__arrow:after
   border-bottom-color var(--c-background) !important
 
@@ -344,6 +364,10 @@ i.icon-shape:after
 .article-danmu-wrp .danmu-box
 .cc-article-wrp .del-wrp .modal-wrap .geetest_holder.geetest_wind .geetest_radar_btn
 .cc-article-wrp .del-wrp .modal-wrap .geetest_holder.geetest_wind .geetest_success_btn
+.rank-active-target
+.rank-fans-medal
+.rank-vedio-target
+.rank-vedio-view
   box-shadow none !important
 
 .ui-dropdown .default
@@ -361,6 +385,11 @@ i.icon-shape:after
   width 940px
 
 .ui-serch .run-serch
+.rank-active-target-item.default
+.rank-fans-medal-item.default
+.rank-vedio-target-item.default
+.rank-vedio-view-item.default
+  border 0 !important
   background-color transparent !important
 
   &::after
