--- a/bilibili-lite/src/public/background.styl
+++ b/bilibili-lite/src/public/background.styl
@@ -190,6 +190,8 @@ textarea
 .backdrop .title-box
 .new-link-top-wrap .content-wrap
 .bcc-popover
+.content-wrap
+.bili-header-m .i_menu_login
   border-color var(--c-border) !important
   background-color var(--c-background) !important
   color var(--c-text) !important
