--- a/bilibili-lite/src/public/button.styl
+++ b/bilibili-lite/src/public/button.styl
@@ -104,6 +104,7 @@ button
 .pbp-panel-feedback
 .dialog-btn
 .watch-later-list header .s-btn
+.login-btn
   position relative
   border-color var(--c-accent) !important
   background-color var(--c-accent) !important
