--- a/bilibili-lite/src/public/form.styl
+++ b/bilibili-lite/src/public/form.styl
@@ -12,6 +12,19 @@
 .el-select-dropdown__item:hover
 .dropbox-component
 .dropbox-component .data-list>li:hover
+.bcc-option:hover
+.ui-calendar .flatpickr-day.inRange
+.ui-calendar .flatpickr-day.nextMonthDay.inRange
+.ui-calendar .flatpickr-day.nextMonthDay.today.inRange
+.ui-calendar .flatpickr-day.nextMonthDay:focus
+.ui-calendar .flatpickr-day.nextMonthDay:hover
+.ui-calendar .flatpickr-day.prevMonthDay.inRange
+.ui-calendar .flatpickr-day.prevMonthDay.today.inRange
+.ui-calendar .flatpickr-day.prevMonthDay:focus
+.ui-calendar .flatpickr-day.prevMonthDay:hover
+.ui-calendar .flatpickr-day.today.inRange
+.ui-calendar .flatpickr-day:focus
+.ui-calendar .flatpickr-day:hover
   background-color var(--c-hover) !important
 
 .el-date-table td.disabled div
@@ -46,6 +59,9 @@ select
 .player-auxiliary-danmaku-date-picker-container .player-auxiliary-danmaku-date-picker-body .day-span.day-enable.active
 .player-auxiliary-danmaku-date-picker-container .player-auxiliary-danmaku-date-picker-body .day-span.day-enable:hover
 .dropbox-component .data-list>li:hover
+.bcc-option.selected span
+.bcc-option:hover span
+.bcc-option.selected .bcc-iconfont
   color var(--c-accent) !important
 
 .time-picker-v2-container .time-picker-head-wrp
@@ -59,6 +75,19 @@ select
 .dropbox-component
 .el-radio-button .el-radio-button__inner
 .checkbox
+.bcc-select-input-wrap
+.ui-calendar .flatpickr-day.inRange
+.ui-calendar .flatpickr-day.nextMonthDay.inRange
+.ui-calendar .flatpickr-day.nextMonthDay.today.inRange
+.ui-calendar .flatpickr-day.nextMonthDay:focus
+.ui-calendar .flatpickr-day.nextMonthDay:hover
+.ui-calendar .flatpickr-day.prevMonthDay.inRange
+.ui-calendar .flatpickr-day.prevMonthDay.today.inRange
+.ui-calendar .flatpickr-day.prevMonthDay:focus
+.ui-calendar .flatpickr-day.prevMonthDay:hover
+.ui-calendar .flatpickr-day.today.inRange
+.ui-calendar .flatpickr-day:focus
+.ui-calendar .flatpickr-day:hover
   border-color var(--c-border) !important
 
 .ui-radio.active .ui-radio-icon
@@ -92,8 +121,10 @@ select
 .bili-dropdown .dropdown-list
 .player-auxiliary-danmaku-date-picker-container
 .dropbox-component .data-list
+.bcc-select-list-wrap
   border 1px solid var(--c-border) !important
   background-color var(--c-background) !important
+  box-shadow none !important
 
 /* 表格 */
 table
