--- a/bilibili-lite/src/t/base.styl
+++ b/bilibili-lite/src/t/base.styl
@@ -1,6 +1,6 @@
 /* 主体 */
 .tag-panel
-.home-page .home-container .home-content .right-panel
+.right-panel
 .user-panel .content .user-pic
 #app .page-container .right-container
 .tab-wrap .tab-item.active:after
