--- a/bilibili-lite/src/v/base.styl
+++ b/bilibili-lite/src/v/base.styl
@@ -93,6 +93,9 @@
 .battery-item.active .battery-bg
 	border-color var(--c-accent) !important
 
+.international-header .primary-menu-itnl
+	border 0
+
 .charge-header-bg
 	background-image none !important
 
