--- a/bilibili-lite/src/video/base.styl
+++ b/bilibili-lite/src/video/base.styl
@@ -127,6 +127,9 @@ ul.star-wrapper li i.icon-star-full
 .bilibili-player
 	box-shadow none
 
+.bilibili-player-ending-panel
+	backdrop-filter blur(5px)
+
 .bilibili-player-video-danmaku-root .bp-svgicon svg
 	fill var(--c-text)
 
