--- a/bilibili-lite/src/video/media.styl
+++ b/bilibili-lite/src/video/media.styl
@@ -26,6 +26,7 @@
 .media-info-count .media-info-count-item em
 .media-tab-wrp
 .media-tab-nav
+.international-header .mini-type
   background-color transparent !important
 
 .media-tab-module-wrp .media-tab-module-content .sl-ep-nav .slider-contro span:hover
@@ -97,6 +98,7 @@
 .media-info-wrp .media-info-content .media-info-inner .media-preview
 .media-tab-nav ul li
 .section-item
+.international-header .mini-type
   border 0 !important
 
 .media-info-card
