--- a/bilibili-lite/src/public/comment.styl
+++ b/bilibili-lite/src/public/comment.styl
@@ -16,6 +16,8 @@
 .emoji-box .emoji-tabs
 .bb-comment .comment-list .list-item .reply-box .view-more .btn-more:hover
 .comment-bilibili-fold .comment-list .list-item .reply-box .view-more .btn-more:hover
+.bb-comment .no-login .baffle
+.comment-bilibili-fold .no-login .baffle
 	background-color var(--c-background) !important
 
 .emoji-box .emoji-tabs .tab-link.on
@@ -78,6 +80,10 @@
 .panel-area .bb-comment .bottom-page.center
 .reply-item
 	border-color var(--c-border) !important
+
+.bb-comment .no-login .baffle
+.comment-bilibili-fold .no-login .baffle
+	border 1px solid var(--c-border)
 
 .comment .comment-selecotr
 .comment .comment-hot-item-user-content
